<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="80dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_settings" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/reg_hint_welcome"
            android:textColor="?attr/textColor"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_hint_user">

            <EditText
                android:id="@+id/et_reg_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
<<<<<<< Updated upstream
                android:nextFocusDown="@id/et_reg_email"/>
=======
                android:nextFocusDown="@id/et_reg_name"
                android:textColorHint="?attr/textColor"/>
>>>>>>> Stashed changes
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< Updated upstream
            android:hint="@string/reg_hint_email">
=======
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_hint_fname">

                    <EditText
                        android:id="@+id/et_reg_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@id/et_reg_lastname"
                        android:textColorHint="?attr/textColor"/>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
>>>>>>> Stashed changes

            <EditText
                android:id="@+id/et_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
<<<<<<< Updated upstream
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@id/et_reg_password"/>
        </com.google.android.material.textfield.TextInputLayout>
=======
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_hint_lname">

                    <EditText
                        android:id="@+id/et_reg_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@id/et_reg_password"
                        android:textColorHint="?attr/textColor"/>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

        </LinearLayout>
>>>>>>> Stashed changes

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_hint_password">

            <EditText
                android:id="@+id/et_reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:nextFocusDown="@id/btn_reg_reg"
                android:textColorHint="?attr/textColor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_reg_reg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:text="@string/reg_hint_reg" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>